--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.36.1",
+    "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2"
   }
